# LiDAR-SLAM-code-comments

./: CMakeLists.txt  Makefile  README.md  compose.yaml
docker/: Dockerfile.mac  Dockerfile.ubuntu  docker_run.sh
docker/install/: install_pangolin.sh
otherWorks/A-LOAM/src/: laserMapping.cpp
otherWorks/FAST_LIO/: CMakeLists.txt  Makefile  compose.yml
otherWorks/FAST_LIO/docker/: Dockerfile
otherWorks/FAST_LIO/docker/install/: install_ceres.sh  install_gtsam.sh  install_hxbasic.sh  install_hxflow.sh  install_json.sh  install_livox_ros.sh  install_livox_sdk.sh  install_ohmyzsh.sh
otherWorks/FAST_LIO/include/IKFoM_toolkit/esekfom/: esekfom.hpp
otherWorks/FAST_LIO/launch/: mapping_avia.launch
otherWorks/FAST_LIO/src/: IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp  preprocess.h
src/ch2/: CMakeLists.txt  motion.cc
src/ch3/: process_gnss.cc  run_imu_integration.cc  utm_convert.cc
src/ch5/: bfnn.cc  gridnn.hpp  kdtree.cc  kdtree.h  test_nn.cc
src/common/: eigen_types.h  io_utils.h
